test/fail/stability-parse-error1.mo
// those of stability.mo that are now parse errors
actor {
  flexible ignore 666; // reject
}

